# Operating-Systems

./: CMakeLists.txt  cmake_install.cmake  raport2.txt  raport3.txt  raport3a.txt  raport3b  raport3b.txt  tmp  zestaw1.cbp
zad1/: lib.c  lib.h
zad2/: main.c  raport2.txt
zad3/: libdll.h
zad3a/: libdll.c  libdll.h  raport3a.txt
zad3b/: raport3b.txt
